--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,10 @@ h1 {
 
 .btn__white__p {
   padding-top: 1.25rem;
+  a {
+    // text-decoration: none;
+    color: black;
+  }
 }
 
 .btn__white {
