--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -1,10 +1,5 @@
 .header {
   background-color: #6989a2;
-  // position: sticky;
-  // top: 0;
-  // border-bottom: #008ed6 3px solid;
-  // opacity: 0.9;
-  // box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 }
 
 .container {
@@ -15,7 +10,7 @@
   margin: 0 auto;
 }
 
-//Menu itself
+//Menu ul
 .menu {
   display: flex;
   flex-wrap: wrap;
