--- a/src/pages/sub_products.scss
+++ b/src/pages/sub_products.scss
@@ -7,6 +7,7 @@ products__section1 - head
   font-size: 14px;
   font-weight: 300;
   text-align: left;
+  outline: none;
 }
 
 .sub__products__section1 {
